[package]
name = "ws_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
futures-util = "0.3"
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = "0.1.9"
tungstenite = "0.17.2"
url = "2.2.2"
